--- a/html/index.html
+++ b/html/index.html
@@ -92,6 +92,7 @@
     </section>
     <section class="footer">
         <p>&copy 2022 Degined by Avishkar Gaurav &trade; </p>
+        <p>&nbsp; Above used logos and all other material are used for learning only not to be taken as offensive</p>
     </section>
 </body>
 
